Fixed contact sidebar width/display properties on faq and contact pages.  Sidebar was not showing and had different width after adding to the homepage for small screens.

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -7,6 +7,12 @@
 	margin-bottom: 20px;
 }
 
+/* Fixes width and display set for contact panel on home page for small screens */
+#contact-sidebar{
+	display:block;
+	width:auto;
+}
+
 #contact-form{
 	margin-top: 0px; 
 	margin-bottom: 100px; 
